# stack-base-rust

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  clippy.toml  compose.override.yaml  compose.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: README.md  ci.yml
docs/adr/: 000-template.md  001-adopt-rust-2021-edition.md  002-adopt-docker-docker-compose.md  003-adopt-pre-commit-hooks.md  004-adopt-tdd-methodology.md  005-adopt-cargo-dependency-management.md  006-adopt-git-workflow.md  README.md
docs/bdr/: 000-template.md  README.md
docs/specs/delivery/: github-actions.md
docs/specs/language/: rust.md
docs/specs/practices/: git.md
src/: main.rs
tests/: README.md
verify/: README.md
