[package]
name = "stack-base-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Rust base project template following the stackable-specs methodology"
authors = ["stackable-specs"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stackable-specs/stack-base-rust"
keywords = ["template", "stackable-specs"]
categories = ["development-tools"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.rust.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }