[package]
name = "stack-base-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Rust base project template following the stackable-specs methodology"
authors = ["stackable-specs"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stackable-specs/stack-base-rust"
keywords = ["template", "stackable-specs"]
categories = ["development-tools"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Lints are configured via command-line flags in CI:
# cargo clippy -- -D warnings
# RUSTDOCFLAGS="-D warnings" cargo doc --no-deps
# See rust.md spec rules 5, 6, 33